--- a/sp500.md
+++ b/sp500.md
@@ -1,7 +1,7 @@
 ---
 title: "S&P 500: Historical performance"
 date: 2021-05-01
-layout: Page
+layout: p
 description: Backtesting leveraged and dollar-cost averaged returns of the S&P 500
 ---
 
